配置afterPropertiesSet